syntax = "proto3";


option  java_multiple_files=true;
option java_package="com.vaddi.stocktrading";
option  java_outer_classname="StockTradingProto";


package com.vaddi.stocktrading;



//UNARY
service StockTradingService{
  rpc getStockPrice(StockRequest) returns (StockResponse);
}


message StockRequest{
  string stock_symbol=1;
}

message StockResponse{
  string stock_symbol=2;
  double price=3;
  string timestamp=1;
}